--- a/css/gouwuche.css
+++ b/css/gouwuche.css
@@ -25,7 +25,6 @@ header > a{
     overflow: hidden;
     background: rgb(251,254,255);
     height: auto;
-
 }
 
 .listItem{
@@ -75,6 +74,21 @@ header > a{
     width: 100%;
     height: 100%;
 }
+.xiaodian{
+    height: 1.74rem;
+    width: 0.25rem;
+    padding: 0.62rem 0rem;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    margin-right: 0.2rem;
+
+}
+.xiaodian img{
+    display: block;
+    width: 0.25rem;
+    height: 0.25rem;
+}
 .info{
     height: 1.74rem;
     flex-grow: 1;
@@ -99,7 +113,7 @@ header > a{
     justify-items: center;
     justify-content: start;
     position: absolute;
-    left: 3.9rem;
+    left: 3.3rem;
     top: 0.6rem;
 }
 .info11{
@@ -128,19 +142,27 @@ header > a{
     margin-left: 0.15rem;
 }
 .ig{
+    margin-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     display: none;
+
 }
 .ig img{
-    width: 2.5rem;
-    height: 2.5rem;
+    width: 2.9rem;
+    height: 2.9rem;
 }
 .ig p{
     width: 2rem;
-    height: 0.26rem;
+    height: 1rem;
     font-size: 0.26rem;
     letter-spacing: 0.01rem;
     color: #000000;
     opacity: 0.4;
+    display: block;
+    text-align: center;
+    line-height: 1rem;
 }
 .ig span{
     width: 1.96rem;
@@ -164,6 +186,32 @@ header > a{
     text-align: center;
     margin-top: 0.17rem;
 }
+.quanxuan{
+    display: flex;
+    height: 0.5rem;
+    width: 1.2rem;
+    box-sizing: border-box;
+    align-items: center;
+    align-content: center;
+    position: fixed;
+    left: 0.2rem;
+    bottom: 1.3rem;
+}
+.quanxuan img{
+    display: block;
+    width: 0.25rem;
+    height: 0.25rem;
+    margin-right: 0.3rem;
+}
+.quanxuan p{
+    width: 0.7rem;
+    height: 0.35rem;
+    font-size: 0.24rem;
+    letter-spacing: 0.01rem;
+    color: #3bacfe;
+    display: block;
+}
+
 footer{
     position: fixed;
     left: 0;
