--- a/css/list.css
+++ b/css/list.css
@@ -35,11 +35,12 @@ header > a{
 .list{
     width: 100%;
     position: absolute;
-    top: 2.7rem;
+    top: 2.3rem;
     bottom: 0;
     padding: 0 0.22rem;
     box-sizing: border-box;
     overflow: hidden;
+    background: rgb(251,254,255);
 }
 .listItem{
     height: 1.74rem;
@@ -55,7 +56,7 @@ header > a{
     flex-basis: 1.74rem;
     height: 1.74rem;
     width: 1.74rem;
-    background: #9a9a9a;
+    background: #FFFFFF;
     padding: 0.31rem 0.27rem;
     box-sizing: border-box;
 }
@@ -121,11 +122,8 @@ header > a{
 }
 .total{
     font-size: 0.18rem;
-    font-weight: normal;
-    font-stretch: normal;
     letter-spacing: 0.01rem;
-    color: #000000;
-    opacity: 0.3;
+    color: rgba(0,0,0,0.3);
     margin-left: 0.15rem;
     position: relative;
 }
@@ -140,6 +138,14 @@ header > a{
     left: -0.15rem;
     top: 0.15rem;
 }
+.total .dingjin{
+    width: 1.3rem;
+    height: 0.25rem;
+    font-size: 0.26rem;
+    color: #fbb548;
+    float: right;
+}
+
 .listItem1 li::before{
     content: "";
     width: 0.05rem;
